@@ -1,8 +1,10 @@
 2008-03-10  Inge Wallin  <inge@lysator.liu.se>
 
 	Get rid of a few unneeded members.
-	* src/lib/MeasureTool.h (m_totalDistance): removed
+	* src/lib/MeasureTool.{h,cpp} (m_totalDistance): removed
 	(m_rad2Pixel): removed
+	(m_empty): removed
+	(me_linecolor): removed
 
 	Fix Krazy issues: proper include directives.
 	/src/lib/MarbleWidget.h,
